made a lot of changes to the sales page and got the table mostly put together

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,11 +69,14 @@ padding: 20px;
 }
 
 thead {
+  margin-top: 50px;
 font-weight: bold;
+background-color: grey;
+color: white;
 }
 
 tbody {
-
+background-color: salmon;
 }
 
 tfoot {
