--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ nav ul {
 nav li {
   display: inline;
   margin-right: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav a {
@@ -37,6 +38,7 @@ nav a {
 .salmonPic {
   max-width: 100%;
   text-align: center;
+  padding: 25px;
 }
 
 .separator {
@@ -44,6 +46,18 @@ nav a {
   height: 2px;
   background-color: lightgrey;
   margin: 20px 0;
+}
+
+#locationName, #avgCookiesPerSale {
+  height: 25px;
+}
+
+#minCusPerHr, #maxCusPerHr {
+  height: 25px;
+}
+
+button {
+  height: 25px;
 }
 
 h2 {
@@ -57,10 +71,18 @@ li {
 margin-left: 50px;
 }
 
+section li {
+  list-style-type: none;
+
+}
+
 footer {
   background-color: lightgrey;
-  padding: 25px;
-  margin-top: 25px;
+  text-align: center;
+  padding: 40px;
+  position: fixed;
+  bottom: 0;
+  width: 100%
 }
 
 table * {
@@ -79,7 +101,9 @@ background-color: salmon;
 }
 
 tfoot {
-
+  font-weight: bold;
+  background-color: grey;
+  color: white;
 }
 
 th {
